Bug 87321 Shift+Tab has duplicate behavior (event handled twice in message compose) r=brade sr=sspitzer a=asa